# cairo-book

./: .all-contributorsrc  .commitlintrc.json  .gitignore  .tool-versions  404.html  CLAUDE.md  Cargo.toml  LANGUAGES  LICENSE  README-CN.md  README.md  Range Check #1060.md  Scarb.toml  _typos.toml  appendix-00.html  appendix-000.html  appendix-01-keywords.html  appendix-02-operators-and-symbols.html  appendix-03-derivable-traits.html  appendix-04-cairo-prelude.html  appendix-05-common-error-messages.html  appendix-06-useful-development-tools.html  appendix-08-system-calls.html  appendix-09-sierra.html  book.js  book.toml  cairo-documentation-style-guide.md  cairo_programs_verifier.sh  ch00-00-introduction.html  ch00-01-foreword.html  ch01-00-getting-started.html  ch01-01-installation.html  ch01-02-hello-world.html  ch01-03-proving-a-prime-number.html  ch02-00-common-programming-concepts.html  ch02-01-variables-and-mutability.html  ch02-02-data-types.html  ch02-03-functions.html  ch02-04-comments.html  ch02-05-control-flow.html  (+127 more)
.issues/: 001-testing-docs-improvement.md  002-fuzz-testing-section.md  003-fork-testing-section.md  004-l1-handler-testing.md  005-testing-docs-polish.md  PR-1250-REVIEW.md
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
cairo-listings/: Cargo.toml  README.md
cairo-listings/src/: cmd.rs  config.rs  error_sets.rs  logger.rs  main.rs  output.rs  tags.rs  utils.rs
cairo-verify/: Cargo.toml  README.md
cairo-verify/src/: cmd.rs  config.rs  error_sets.rs  logger.rs  main.rs  tags.rs  utils.rs
css/: variables.css
docs/: AUTHORING.md  CONTRIBUTING.md  cairo-documentation-style-guide.md  development.md
es/: 404.html  appendix-00.html  appendix-000.html  appendix-01-keywords.html  appendix-02-operators-and-symbols.html  appendix-03-derivable-traits.html  appendix-04-cairo-prelude.html  appendix-05-common-error-messages.html  appendix-06-useful-development-tools.html  appendix-08-system-calls.html  appendix-09-sierra.html  ch00-00-introduction.html  ch00-01-foreword.html  ch01-00-getting-started.html  ch01-01-installation.html  ch01-02-hello-world.html  ch01-03-proving-a-prime-number.html  ch02-00-common-programming-concepts.html  ch02-01-variables-and-mutability.html  ch02-02-data-types.html  ch03-01-arrays.html  (+113 more)
mdbook-cairo/: Cargo.toml  README.md
mdbook-cairo/scripts/: cairo_local_verify.sh  cairo_programs_verifier.sh
mdbook-cairo/src/: lib.rs  main.rs
(+2916 files in other folders)
