[package]
name = "cairo-listings"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Cairo-book community"]
description = "A tool for running adequate cairo tests tools on cairo files."
repository = "https://github.com/cairo-book/cairo-book.github.io"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
indicatif = "0.17.8"
lazy_static = "1.4.0"
log = "0.4.21"
rayon = "1.10.0"
regex = "1.10.4"
serde = "1.0.200"
walkdir = "2.5.0"
