[package]
name = "mdbook-cairo"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Cairo-book community"]
description = "A mdbook preprocessor to be used with cairo-verify"
repository = "https://github.com/cairo-book/cairo-book.github.io"

[dependencies]
clap = "4.3.5"
lazy_static = "1.4.0"
mdbook = "0.4.28"
regex = "1.8.4"
semver = "1.0.17"
serde_json = "1.0.97"
