[package]
name = "mdbook-cairo"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Cairo-book community"]
description = "A mdbook preprocessor to be used with cairo-listings"
repository = "https://github.com/cairo-book/cairo-book.github.io"

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
lazy_static = "1.4.0"
log = "0.4.21"
mdbook = "0.4.40"
regex = "1.10.4"
semver = "1.0.22"
serde_json = "1.0.116"
